# bun-pty

./: .gitignore  .npmignore  .npmrc  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  build.sh  build.ts  package.json  test-pty.js  tsconfig.json
.github/workflows/: publish.yml
examples/: README.md  index.ts  package.json  tsconfig.json
npm/darwin-arm64/: index.cjs  index.js  index.mjs  package.json
npm/darwin-x64/: index.cjs  index.js  index.mjs  package.json
npm/linux-arm64/: index.cjs  index.js  index.mjs  package.json
npm/linux-x64/: index.cjs  index.js  index.mjs  package.json
npm/win32-x64/: index.cjs  index.js  index.mjs  package.json
rust-pty/: Cargo.toml
rust-pty/src/: lib.rs
src/: index.ts  interfaces.ts  terminal.integration.test.ts  terminal.ts  vi.integration.test.ts
